objects/Product2.object
<CustomObject>
    <fields>
        <fullName>AccessConfiguration__c</fullName>
        <label>Access Configuration</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccessId__c</fullName>
        <label>Access Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccessSpeed__c</fullName>
        <label>Access Speed</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Type__c</fullName>
        <label>Access Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alteration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Component</label>
        <referenceTo>vlocity_cmt__PricingComponent__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Recurrance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Recurrance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPESupplier__c</fullName>
        <label>CPE Supplier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargeZone__c</fullName>
        <label>Charge Zone</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClassOfService__c</fullName>
        <label>Class of Service</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractTerm__c</fullName>
        <label>Contract Term</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DesignCode__c</fullName>
        <label>DesignCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EquipmentPaymentOption__c</fullName>
        <label>Equipment Payment Option</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExcessUsageModel__c</fullName>
        <label>Excess Usage Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Block</fullName>
                    <default>true</default>
                    <label>Block</label>
                </value>
                <value>
                    <fullName>PAYG - Pay As You Go</fullName>
                </value>
                <value>
                    <fullName>Shaped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GrantMeasurementType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant Measurement Type</label>
        <referenceTo>vlocity_cmt__ChargeMeasurement__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>GrantMeasurements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrantUnits__c</fullName>
        <label>Grant Units</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Amount_Limit__c</fullName>
        <label>Grant Amount Limit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unlimited</fullName>
                    <default>true</default>
                    <label>Unlimited</label>
                </value>
                <value>
                    <fullName>Capped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grant_Period_Units__c</fullName>
        <label>Grant Period Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Minute</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grant_Type__c</fullName>
        <label>Grant Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Voice SMS</fullName>
                </value>
                <value>
                    <fullName>Voice talk</fullName>
                </value>
                <value>
                    <fullName>Voice data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grant_Value__c</fullName>
        <label>Grant Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternetAccessType__c</fullName>
        <label>Internet Access Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsBoltOn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bolt On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ManagementLevel__c</fullName>
        <label>Management Level</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemorySize__c</fullName>
        <label>Memory Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MulticastSpeed__c</fullName>
        <label>Multicast Speed</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetworkId__c</fullName>
        <label>Network ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OLO_Name__c</fullName>
        <label>OLO Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhoneNumber__c</fullName>
        <label>Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PortId__c</fullName>
        <label>Port Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RedeemableCode__c</fullName>
        <label>Redeemable Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoamingRegions__c</fullName>
        <label>Roaming</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Portugal</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Switzerland</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rollover__c</fullName>
        <label>Rollover</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SecretNumber__c</fullName>
        <label>Secret Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceAssuranceLevel__c</fullName>
        <label>Service Assurance Level</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceID__c</fullName>
        <label>Service ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceState__c</fullName>
        <label>Service State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shareable__c</fullName>
        <label>Shareable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TimePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Plan</label>
        <referenceTo>TimePlan__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>PromotionTimePlan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Valid_Grant_Period__c</fullName>
        <label>Valid Grant Period</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valid_Period_Units__c</fullName>
        <label>Valid Period Units</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Minute(s)</fullName>
                </value>
                <value>
                    <fullName>Day(s)</fullName>
                </value>
                <value>
                    <fullName>Week(s)</fullName>
                </value>
                <value>
                    <fullName>Month(s)</fullName>
                </value>
                <value>
                    <fullName>Quarter(s)</fullName>
                </value>
                <value>
                    <fullName>Year(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VendorName__c</fullName>
        <label>Vendor Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ApprovedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ApprovedOn__c</fullName>
        <label>Approved On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CategoryData__c</fullName>
        <description>Data about the Catalogs/Categories that this product belongs to, stored in JSON format.</description>
        <label>Category Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ChangeDetectorImplementation__c</fullName>
        <description>Name of implementation which will be used by Change Detector in XOM</description>
        <inlineHelpText>Name of implementation which will be used by Change Detector in XOM</inlineHelpText>
        <label>ChangeDetectorImplementation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ClassId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For product spec and commercial offer types of records, identifies the class of this product spec or offer.</description>
        <label>Class</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (Class)</relationshipLabel>
        <relationshipName>ClassProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of the Product. Used to identify the product across Salesforce instances.</description>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__HeaderData__c</fullName>
        <description>Stores the headers for Matrix is stored as a JSON.</description>
        <inlineHelpText>Stores the headers for Matrix is stored as a JSON.</inlineHelpText>
        <label>Header Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__HelpText__c</fullName>
        <label>Help Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ImageId__c</fullName>
        <label>Image</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsConfigurable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Configurable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsLocationDependent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Location Dependent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsNotAssetizable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Assetizable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsOrderable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Orderable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JSONAttribute__c</fullName>
        <label>JSONAttribute</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Modification__c</fullName>
        <label>Modification#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ObjectTypeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Object Type</label>
        <referenceTo>vlocity_cmt__ObjectClass__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentClassId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED</description>
        <label>Parent Class</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Subclasses</relationshipLabel>
        <relationshipName>Subclasses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductSpecId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For commercial offers, this identifies the product specification on which this offer is based.</description>
        <label>Product Spec</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>ProductSpecOffers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductTemplateProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Template</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products Based on Template</relationshipLabel>
        <relationshipName>ProductTemplateProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Scope__c</fullName>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Order Item</fullName>
                    <default>true</default>
                    <label>Order Item</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SpecificationType__c</fullName>
        <description>For product spec types of records, identifies the type of specification such as product spec, resource spec or service spec.</description>
        <label>Specification Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Resource</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Offer</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Grant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StandardPremium__c</fullName>
        <label>Standard Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubType__c</fullName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>vlocity_cmt__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                    <default>true</default>
                    <label>Product</label>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TimeToLive__c</fullName>
        <label>Time To Live</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TrackAsAgreement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if product needs to be tracked as part of agreement</description>
        <label>Track As Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                    <default>true</default>
                    <label>Product</label>
                </value>
                <value>
                    <fullName>Product Bundle</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VendorAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED from 888.83</description>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>Accessories</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Accessory</value>
        </filters>
        <label>Accessories</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <recordTypes>
        <fullName>vlocity_cmt__Class</fullName>
        <active>true</active>
        <label>Class</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__Product</fullName>
        <active>true</active>
        <label>Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__ProductTemplate</fullName>
        <active>true</active>
        <label>Product Template</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>